Downgraded to Java 11 (unfortunately) due to dependency issues